apps/clusters/k8s-02/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana02-kontur-io-ng
  namespace: monitoring
spec:
  ingressClassName: ingress-nginx
  rules:
    - host: grafana.k8s-02.konturlabs.com
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.k8s-02.konturlabs.com
      secretName: grafana-k8s-02-konturlabs-com-tls
